agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMVatAmountType1__c.field-meta.xml
<CustomField>
    <fullName>ALMVatAmountType1__c</fullName>
    <description>Displays the total VAT for all items of type 1. Calculated by an APEX script.|Advendio. MediaCampaign</description>
    <label>ALM VAT Amount (Type 1 (A))</label>
    <precision>10</precision>
    <scale>9</scale>
    <type>Currency</type>
</CustomField>