agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMVatAmountType1Total__c.field-meta.xml
<CustomField>
    <fullName>ALMVatAmountType1Total__c</fullName>
    <description>Displays the total VAT for all items of type 1. Calculated by an APEX script.|Advendio. MediaCampaign</description>
    <label>ALM VAT Amount (Type 1 (Total))</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>