agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMVATExempt__c.field-meta.xml
<CustomField>
    <fullName>ALMVATExempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Creates new Campaign Items for this Media Campaign as VAT Exempt. This will not influence already existing Items.|Advendio. MediaCampaign</description>
    <label>ALM Create Items as VAT Exempt</label>
    <type>Checkbox</type>
</CustomField>