agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMVatRateType1__c.field-meta.xml
<CustomField>
    <fullName>ALMVatRateType1__c</fullName>
    <description>This VAT rate has been defined in your custom settings and depends on which country is buying from whom. It is automatically set by an apex script.|Advendio. MediaCampaign</description>
    <label>ALM VAT Rate % (Type 1 (A))</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>