agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMVatRateType2Total__c.field-meta.xml
<CustomField>
    <fullName>ALMVatRateType2Total__c</fullName>
    <description>This VAT rate has been defined in your custom settings and depends on which country is buying from whom and the type in your ad spec. It is automatically set by an apex script.|Advendio. MediaCampaign</description>
    <label>ALM VAT Rate % (Type 2 (Total))</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>