agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMVatTotal__c.field-meta.xml
<CustomField>
    <fullName>ALMVatTotal__c</fullName>
    <description>Formula to add the VAT of type 1, type 2, type 3 and type 4.|Advendio. MediaCampaign</description>
    <label>ALM VAT Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>