agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMyour_reference_number2__c.field-meta.xml
<CustomField>
    <fullName>ALMyour_reference_number2__c</fullName>
    <description>The reference number will be displayed on the proposal and is the reference number of the agency.|Advendio. MediaCampaign</description>
    <label>ALM Ref/PO Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>