agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMYourReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ALMYourReferenceNumber__c</fullName>
    <description>|Advendio. Invoice</description>
    <label>ALM Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>