agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Amount_after_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Amount_after_Cancellation__c</fullName>
    <description>Total price Rollup Sum of Non cancelled Line items</description>
    <label>Amount after Cancellation</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Cancelled__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>