agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Amount_GBP__c.field-meta.xml
<CustomField>
    <fullName>Amount_GBP__c</fullName>
    <formula>Amount /  Exchange_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount (GBP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>