agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Annual_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contract_Value__c</fullName>
    <formula>if( Current_Deal_Length__c==null,0,
( Amount  /  Current_Deal_Length__c ) * 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>