agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Annual_Contract_Value_converted__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contract_Value_converted__c</fullName>
    <description>Annual Contract Value in GBP, used for Renewals Reporting</description>
    <formula>Annual_Contract_Value__c  /  Exchange_Rate__c</formula>
    <inlineHelpText>Annual Contract Value in GBP, used for Renewals Reporting</inlineHelpText>
    <label>Annual Contract Value (converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>