agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Annual_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Annual_Uplift__c</fullName>
    <description>Previous Annual Contract Value vs Annual Contract Value</description>
    <inlineHelpText>Previous Annual Contract Value vs Annual Contract Value</inlineHelpText>
    <label>% Annual Uplift</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>