agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/API_deal__c.field-meta.xml
<CustomField>
    <fullName>API_deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if it is an API deal</description>
    <label>API deal</label>
    <type>Checkbox</type>
</CustomField>