agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox determines whether an opportunity linked to a bad debtor has been approved by finance</description>
    <inlineHelpText>This checkbox determines whether an opportunity linked to a bad debtor has been approved by finance</inlineHelpText>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>