agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Aspirational_Price__c.field-meta.xml
<CustomField>
    <fullName>Aspirational_Price__c</fullName>
    <label>Aspirational Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>