agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Attorney_Name__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Name__c</fullName>
    <label>ALM Attorney Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>