agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Auto_Renewal_Clause__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Clause__c</fullName>
    <label>Auto Renewal Notice Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Auto_Renewal_Clause</valueSetName>
    </valueSet>
</CustomField>