agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Auto_Renewal_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Email_Date__c</fullName>
    <label>Auto Renewal Email Date</label>
    <type>Date</type>
</CustomField>