agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Bad_Debtor_Status__c.field-meta.xml
<CustomField>
    <fullName>Bad_Debtor_Status__c</fullName>
    <formula>IF ( OR( ISPICKVAL(Account.Debtor_Status__c , &quot;Bad Debtor&quot;), ISPICKVAL( Ultimate_Account__r.Debtor_Status__c , &quot;Bad Debtor&quot;)),
&quot;🔴&quot;,
IF ( OR( ISPICKVAL(Account.Debtor_Status__c, &quot;Problem Debtor&quot;), ISPICKVAL(Ultimate_Account__r.Debtor_Status__c, &quot;Problem Debtor&quot;)),
&quot;🟠&quot;,
IF (ISPICKVAL(Account.Debtor_Status__c, &quot;Good Debtor&quot;),
&quot;🟢&quot;, 
&quot;⚪&quot;
)))</formula>
    <label>Bad Debtor Status</label>
    <type>Text</type>
</CustomField>