agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Benefitting_Group__c.field-meta.xml
<CustomField>
    <fullName>Benefitting_Group__c</fullName>
    <label>Benefitting Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>