agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Benefitting_Group_Product__c.field-meta.xml
<CustomField>
    <fullName>Benefitting_Group_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Benefitting group Opportunity</description>
    <label>Benefitting Group Product</label>
    <type>Checkbox</type>
</CustomField>