agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/BG_Line_Item_Geography__c.field-meta.xml
<CustomField>
    <fullName>BG_Line_Item_Geography__c</fullName>
    <label>BG Line Item Geography</label>
    <length>250</length>
    <type>Text</type>
</CustomField>