agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/BG_Line_Item_Size__c.field-meta.xml
<CustomField>
    <fullName>BG_Line_Item_Size__c</fullName>
    <label>BG Line Item Size</label>
    <length>40</length>
    <type>Text</type>
</CustomField>