agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Bill_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Address__c</fullName>
    <label>ALM Bill to Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>