agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Bill_to_Country__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Country__c</fullName>
    <defaultValue>&quot;USA&quot;</defaultValue>
    <label>ALM Bill to Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>