agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Bill_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Email__c</fullName>
    <label>ALM Bill to Email</label>
    <type>Email</type>
</CustomField>