agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Bill_To_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_First_Name__c</fullName>
    <label>ALM Bill To First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>