agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Bill_to_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Phone__c</fullName>
    <label>ALM Bill to Phone</label>
    <type>Phone</type>
</CustomField>