agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Bill_to_State__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_State__c</fullName>
    <label>ALM Bill to State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>