agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Bill_to_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Zip_Code__c</fullName>
    <label>ALM Bill to Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>