agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Billing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity__c</fullName>
    <label>Billing Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LBR</fullName>
            </value>
            <value>
                <fullName>GHK</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>MBL</fullName>
            </value>
            <value>
                <fullName>ALM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>