agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <description>Billing Method</description>
    <inlineHelpText>Billing Method</inlineHelpText>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Postal</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
            <value>
                <fullName>Send Invoice</fullName>
            </value>
            <value>
                <fullName>Upfront Check</fullName>
            </value>
            <value>
                <fullName>Upfront Credit Card</fullName>
            </value>
            <value>
                <fullName>Upfront Invoice</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>