agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Billto__c.field-meta.xml
<CustomField>
    <fullName>Billto__c</fullName>
    <description>ALM field</description>
    <label>ALM Billto #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>