agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Break_Clause__c.field-meta.xml
<CustomField>
    <fullName>Break_Clause__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.Break_Clause__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Break Clause</label>
    <type>Checkbox</type>
</CustomField>