agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Budget_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Renewal_Date__c</fullName>
    <description>Used for Renewals Reporting. Calculated as the End Date of the Previous Contract + 1 Day.</description>
    <label>Budget Renewal Date</label>
    <type>Date</type>
</CustomField>