agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Budget_Renewal_Month_New__c.field-meta.xml
<CustomField>
    <fullName>Budget_Renewal_Month_New__c</fullName>
    <description>Displays the Finance Close date as ‘mm-yyyy’</description>
    <formula>CASE(TEXT(MONTH(Budget_Renewal_Date__c)),
&quot;1&quot;, &quot;01&quot;,
&quot;2&quot;, &quot;02&quot;,
&quot;3&quot;, &quot;03&quot;,
&quot;4&quot;, &quot;04&quot;,
&quot;5&quot;, &quot;05&quot;,
&quot;6&quot;, &quot;06&quot;,
&quot;7&quot;, &quot;07&quot;,
&quot;8&quot;, &quot;08&quot;,
&quot;9&quot;, &quot;09&quot;,
&quot;10&quot;, &quot;10&quot;,
&quot;11&quot;, &quot;11&quot;,
&quot;12&quot;, &quot;12&quot;,
NULL
)
&amp; &quot;-&quot; &amp;
TEXT(YEAR(Budget_Renewal_Date__c))</formula>
    <inlineHelpText>Displays the Finance Close date as ‘mm-yyyy’</inlineHelpText>
    <label>Budget Renewal Month New</label>
    <type>Text</type>
</CustomField>