agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Bypass_Validations__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to bypass the validation on contact roles</description>
    <inlineHelpText>Used to bypass the validation on contact roles</inlineHelpText>
    <label>Bypass Validations</label>
    <type>Checkbox</type>
</CustomField>