agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Call_Note__c.field-meta.xml
<CustomField>
    <fullName>Call_Note__c</fullName>
    <label>Call Note</label>
    <type>TextArea</type>
</CustomField>