agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Campaign_Formula__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Formula__c</fullName>
    <description>Duplicated to pull into Pardot</description>
    <formula>Campaign__c</formula>
    <inlineHelpText>Duplicated to pull into Pardot</inlineHelpText>
    <label>Campaign (Formula)</label>
    <type>Text</type>
</CustomField>