agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Campaign_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name_Formula__c</fullName>
    <description>Campaign Name added as text formula field for Gong Deal Board.</description>
    <formula>Campaign__r.Name</formula>
    <inlineHelpText>Campaign Name added as text formula field for Gong Deal Board.</inlineHelpText>
    <label>Campaign Name (Formula)</label>
    <type>Text</type>
</CustomField>