agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate opportunity has been entered</fullName>
            </value>
            <value>
                <fullName>Opportunity has been finalized as part of a larger deal, or under a different firm</fullName>
            </value>
            <value>
                <fullName>Products have been discontinued</fullName>
            </value>
            <value>
                <fullName>Other circumstances as agreed by Sales Management for one-off reasons</fullName>
            </value>
            <value>
                <fullName>No Fault Cancellations</fullName>
            </value>
            <value>
                <fullName>Cancellation to be Reissued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>