agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To flag Opportunities that are being Cancelled completely. Please leave blank if you are only cancelling part of the Opportunity.</description>
    <inlineHelpText>To flag Opportunities that are being Cancelled completely. Please leave blank if you are only cancelling part of the Opportunity.</inlineHelpText>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>