agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Cancelled_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Opportunity this Cancellation or Upsell relates to.</description>
    <inlineHelpText>The Opportunity this Cancellation or Upsell relates to.</inlineHelpText>
    <label>Amended Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Amended Opportunity)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>