agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Cancelled_PACV__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_PACV__c</fullName>
    <description>Previous Annual Contract Value cancelled</description>
    <formula>IF (
AND(RecordType.DeveloperName = &quot;Renewals&quot;,
TEXT(StageName) = &quot;Closed Lost&quot;), Previous_Annual_Contract_Value__c , 0)
*
-1</formula>
    <inlineHelpText>Previous Annual Contract Value cancelled</inlineHelpText>
    <label>Cancelled PACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>