agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Cancelled_Volume__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Volume__c</fullName>
    <description>The volume of Renewal Opportunities Closed Lost</description>
    <formula>IF (
AND(RecordType.DeveloperName = &quot;Renewals&quot;,
TEXT( StageName) = &quot;Closed Lost&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The volume of Renewal Opportunities Closed Lost</inlineHelpText>
    <label>Cancelled Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>