agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Card_Holder__c.field-meta.xml
<CustomField>
    <fullName>Card_Holder__c</fullName>
    <label>ALM Card Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>