agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Case_Name_or_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Name_or_Number__c</fullName>
    <label>ALM Case Name or Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>