agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <label>ALM Check #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>