agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Clay_Routed__c.field-meta.xml
<CustomField>
    <fullName>Clay_Routed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this opportunity originated from a lead that was auto-routed via Clay Labs. Used for pipeline attribution and performance reporting.</description>
    <inlineHelpText>Inherited from the originating lead/contact. Used to track revenue influenced by Clay routing. Do not edit manually.</inlineHelpText>
    <label>Clay Routed</label>
    <type>Checkbox</type>
</CustomField>