agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Client_Engagement_Director__c.field-meta.xml
<CustomField>
    <fullName>Client_Engagement_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ALM Client Engagement Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>