agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Close_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Month__c</fullName>
    <description>Close Date as MM-YYYY, used for reporting and dashboards.</description>
    <formula>Text(YEAR((  CloseDate  )))

+ &quot;-&quot;

+

CASE(
MONTH(( CloseDate )),
1, &quot;01&quot;,
2, &quot;02&quot;,
3, &quot;03&quot;,
4, &quot;04&quot;,
5, &quot;05&quot;,
6, &quot;06&quot;,
7, &quot;07&quot;,
8, &quot;08&quot;,
9, &quot;09&quot;,
10, &quot;10&quot;,
11, &quot;11&quot;,
12,&quot;12&quot;,
&quot;&quot;)</formula>
    <inlineHelpText>Close Date as MM-YYYY, used for reporting and dashboards.</inlineHelpText>
    <label>Close Date Month</label>
    <type>Text</type>
</CustomField>