agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Close_Date_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Quarter__c</fullName>
    <formula>CEILING( MONTH (  CloseDate  ) / 3 )</formula>
    <label>Close Date Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>