agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Close_Stage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Close_Stage_Amount__c</fullName>
    <description>Total value of Opportunities at Close stage</description>
    <formula>IF( TEXT(StageName) = &quot;Close&quot;, Amount , 0
)</formula>
    <inlineHelpText>Total value of Opportunities at Close stage</inlineHelpText>
    <label>Contract Out Stage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>