agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Close_Volume__c.field-meta.xml
<CustomField>
    <fullName>Close_Volume__c</fullName>
    <description>Volume of Opportunities at the Close stage, used for reporting.</description>
    <formula>IF( TEXT(StageName) = &apos;Contract Out&apos;, 1, 0)</formula>
    <inlineHelpText>Volume of Opportunities at the Close stage, used for reporting.</inlineHelpText>
    <label>Contract Out (Volume)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>