agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Close_Won_Amount__c.field-meta.xml
<CustomField>
    <fullName>Close_Won_Amount__c</fullName>
    <description>Total value of Opportunities at Closed Won stage</description>
    <formula>IF( TEXT(StageName) = &quot;Closed Won&quot;, Amount , 0
)</formula>
    <inlineHelpText>Total value of Opportunities at Closed Won stage</inlineHelpText>
    <label>Close Won Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>