agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Closed_Lost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Amount__c</fullName>
    <description>Total value of Opportunities at Closed Lost stage</description>
    <formula>IF( TEXT(StageName) = &quot;Closed Lost&quot;, Amount , 0
)</formula>
    <inlineHelpText>Total value of Opportunities at Closed Lost stage</inlineHelpText>
    <label>Closed Lost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>