agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Closed_Lost_primary_reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_primary_reason__c</fullName>
    <description>Please enter the main reason to close lost this opportunity</description>
    <inlineHelpText>Indicates the main reason to close lost an opportunity</inlineHelpText>
    <label>Closed Lost primary reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget issues</fullName>
            </value>
            <value>
                <fullName>Buyer issues</fullName>
            </value>
            <value>
                <fullName>Client chose competitor</fullName>
            </value>
            <value>
                <fullName>Client engagement issue</fullName>
            </value>
            <value>
                <fullName>Content issues</fullName>
            </value>
            <value>
                <fullName>Lack of ROI</fullName>
            </value>
            <value>
                <fullName>LBR cancellation</fullName>
            </value>
            <value>
                <fullName>LBR engagement issue</fullName>
            </value>
            <value>
                <fullName>No fault cancellation</fullName>
            </value>
            <value>
                <fullName>Product issues</fullName>
            </value>
            <value>
                <fullName>T&amp;Cs - Non-Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>